--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-
 # Godot-specific ignores
 .import/
 export.cfg
 export_presets.cfg
 
-# Mono-specific ignores
-.mono/
-data_*/
+# Imported translations (automatically generated from CSV files)
+*.translation
